Corrige problemas de dependencias

--- a/build.gradle
+++ b/build.gradle
@@ -108,17 +108,24 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 // a dependency that will be present for runtime testing but that is
 // "optional", meaning it will not be pulled by dependents of this mod.
 configurations {
+    libraries
+    implementation.extendsFrom libraries
     runtimeClasspath.extendsFrom localRuntime
 }
 
 dependencies {
+    implementation("org.xerial:sqlite-jdbc:3.45.1.0") {
+        exclude group: "org.slf4j", module: "slf4j-simple"
+    }
+
+    additionalRuntimeClasspath("org.xerial:sqlite-jdbc:3.45.1.0")
+
     jarJar(
             implementation("org.xerial:sqlite-jdbc:3.45.1.0")
     ) {
         version {
             prefer "3.45.1.0"
         }
-        exclude group: "org.slf4j", module: "slf4j-simple"
     }
 }
 
